[metadata]
name = ex_cythonmodule
#version = attr: ex_cythonmodule.__version__
version = 18.8.18
url = https://github.com/sgryjp/ex_cythonmodule
author = Suguru Yamamoto
author_email = sgryjp@gmail.com
license = MIT
description = Exercise project: Simplest module using Cython
python_requires = >= 3.4
long_description = file: README.md, LICENSE.md
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
packages = find:
